@@ -6,17 +6,18 @@ use warnings FATAL => 'all';
 use Apache::TestConfig ();
 
 use Exporter ();
-use vars qw(@Levels @Utils @ISA @EXPORT $VERSION $Level $LogFH);
+use vars qw(@Levels @Utils @Subs @ISA @EXPORT $VERSION $Level $LogFH);
 
 BEGIN {
     @Levels = qw(emerg alert crit error warning notice info debug);
     @Utils  = qw(todo);
+    @Subs   = map {($_, "${_}_mark", "${_}_sub")} (@Levels, @Utils);
 }
 
 @ISA     = qw(Exporter);
-@EXPORT  = (@Levels, @Utils);
+@EXPORT  = (@Subs);
 $VERSION = '0.01';
-use subs (@Levels, @Utils);
+use subs (@Subs);
 
 # default settings overrideable by users
 $Level = undef;
@@ -75,30 +76,49 @@ else {
     sub { map { ref $_ ? Data::Dumper::Dumper($_) : $_ } @_ } :
     sub { @_ };
 
+sub prefix {
+    my $prefix = shift;
+
+    if ($prefix eq 'mark') {
+        return join(":", (caller(3))[1..2]) . " : ";
+    }
+    elsif ($prefix eq 'sub') {
+        return (caller(3))[3] . " : ";
+    }
+    else {
+        return '';
+    }
+}
+
 sub c_trace {
-    my $level = shift;
+    my ($level, $prefix_type) = (shift, shift);
+    my $prefix = prefix($prefix_type);
     print $LogFH 
-        map { "$colors{$level}$_$colors{reset}\n"}
+        map { "$colors{$level}$prefix$_$colors{reset}\n"}
         grep defined($_), expand(@_);
 }
 
 sub nc_trace {
-    my $level = shift;
+    my ($level, $prefix_type) = (shift, shift);
+    my $prefix = prefix($prefix_type);
     print $LogFH 
-        map { sprintf "%-3s %s\n", $colors{$level}, $_ } 
+        map { sprintf "%-3s %s%s\n", $colors{$level}, $prefix, $_ } 
         grep defined($_), expand(@_);
 }
 
 {
     my $trace = HAS_COLOR ? \&c_trace : \&nc_trace;
-
+    my @prefices = ('', 'mark', 'sub');
     # if the level is sufficiently high, enable the tracing for a
     # given level otherwise assign NOP
-    for my $level (@Levels,@Utils) {
+    for my $level (@Levels, @Utils) {
         no strict 'refs';
-        *$level = sub { 
-            $trace->($level, @_) if trace_level() >= $levels{$level};
-        };
+        for my $prefix (@prefices) {
+            my $func = $prefix ? "${level}_$prefix" : $level;
+            *$func = sub { $trace->($level, $prefix, @_)
+                               if trace_level() >= $levels{$level};
+                     };
+        }
     }
 }
 
@@ -123,6 +143,12 @@ __END__
 
     use Apache::TestTrace;
   
+    debug "foo bar";
+  
+    info_sub "missed it";
+  
+    error_mark "something is wrong";
+
     # test sub that exercises all the tracing functions
     sub test {
         print $Apache::TestTrace::LogFH 
@@ -179,6 +205,12 @@ function is warning(), since warn is already taken by Perl.
 The module provides another trace function called todo() which is
 useful for todo items. It has the same level as I<debug> (the
 highest).
+
+There are two more variants of each of these functions. If the
+I<_mark> suffix is appended (e.g., I<error_mark>) the trace will start
+with the filename and the line number the function was called from. If
+the I<_sub> suffix is appended (e.g., I<error_info>) the trace will
+start with the name of the subroutine the function was called from.
 
 If you have C<Term::ANSIColor> installed the diagnostic messages will
 be colorized, otherwise a special for each function prefix will be
